# tereporto

./: .prettierrc.json  README.md  package.json  pnpm-lock.yaml
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: base.rs  constants.rs  event.rs  event_watcher.rs  hash_handler.rs  helpers.rs  lib.rs  main.rs  settings.rs  settings_cmd.rs  storage.rs  storage_cmd.rs  teleport.rs  teleport_cmd.rs  toml_handler.rs
src-tauri/tests/: toml_handler.rs  toml_reader.rs
src/components/: Button.vue  ButtonGroup.vue  Checkbox.vue  ConnectionPanel.vue  Descriptive.vue  DirectoryChooser.vue  FileSelection.vue  Flex.vue  FunctionalPanel.vue  Grid.vue  GridItem.vue  Idol.vue  List.vue  ListItem.vue  Modal.vue  ModalContent.vue  ModalFooter.vue  PlaceHolder.vue  RadioButton.vue  SettingsPanel.vue  StoragePanel.vue  SwapLoading.vue  TeleportPanel.vue  TitleHeader.vue
src/components/Icon/: DatabaseMarker.vue  FolderDestinationIcon.vue  FolderPathConnectIcon.vue  FolderTransferIcon.vue  GearIcon.vue  MapMarkerIcon.vue  TrashIcon.vue
src/globals/: index.ts  toastify.ts
src/helpers/: index.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ja.json  vi.json
src/server/: dir-control.ts  index.ts  settings.ts  storage.ts  teleport.ts
src/types/: index.ts
