[package]
name = "tereporto"
version = "0.3.5"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.3"
bcrypt = "0.14.0"
crypto = "0.5.0"
digest = "0.10.6"
sha2 = "0.10.6"
hex = "0.4.3"
toml_edit = "0.19.8"
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1.28.0", features = ["full"] }
clap = { version = "4.2.7", features = ["derive"] }
open = "4.1.0"
rayon = "1.7.0"
notify = "5.1.0"
regex = "1.8.1"
crossbeam-channel = "0.5.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
